--- a/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
@@ -4,7 +4,8 @@ metadata:
   namespace: example06
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/sync-wave: "10"  
+    argocd.argoproj.io/sync-wave: "10" 
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
   generateName: smoke-tests-
   labels:
     codefresh.io/cert: smoke-job  
